Add item filters, make item pipes move to closest inventory, more fixes